--- a/main.kv
+++ b/main.kv
@@ -53,6 +53,8 @@
                 id: screen_manager
                 Screen:
                     name: 'Home'
+                    MapPanelWidget:
+                        id: map_panel_widget
                 Screen:
                     name: 'Menu'
                     BoxLayout:
@@ -71,27 +73,27 @@
                                     Button:
                                         background_normal: 'data/images/settings/notes.png'
                                         background_down: 'data/images/settings/notes.png'
-                                        on_release: root.onNextScreen(self, "Notes")
+                                        on_release: root.do_set_screen(self, "Notes")
                                     Button:
                                         background_normal: 'data/images/settings/messages.png'
                                         background_down: 'data/images/settings/messages.png'
-                                        on_release: root.onNextScreen(self, "Messages")
+                                        on_release: root.do_set_screen(self, "Messages")
                                     Button:
                                         background_normal: 'data/images/settings/recorder.png'
                                         background_down: 'data/images/settings/recorder.png'
-                                        on_release: root.onNextScreen(self, "Recorder")
+                                        on_release: root.do_set_screen(self, "Recorder")
                                     Button:
                                         background_normal: 'data/images/settings/soundboard.png'
                                         background_down: 'data/images/settings/soundboard.png'
-                                        on_release: root.onNextScreen(self, "Soundboard")
+                                        on_release: root.do_set_screen(self, "Soundboard")
                                     Button:
                                         background_normal: 'data/images/settings/checklist.png'
                                         background_down: 'data/images/settings/checklist.png'
-                                        on_release: root.onNextScreen(self, "Checklist")
+                                        on_release: root.do_set_screen(self, "Checklist")
                                     Button:
                                         background_normal: 'data/images/settings/campaigns.png'
                                         background_down: 'data/images/settings/campaigns.png'
-                                        on_release: root.onNextScreen(self, "Campaigns")
+                                        on_release: root.do_set_screen(self, "Campaigns")
                 Screen:
                     name: 'Notes'
                     BoxLayout:
@@ -204,8 +206,8 @@
             Button:
                 background_normal: 'data/images/nav/map.png'
                 background_down: 'data/images/nav/map.png'
-                on_release: root.onNextScreen(self, "Home")
+                on_release: root.do_set_screen(self, "Home")
             Button:
                 background_normal: 'data/images/nav/menu.png'
                 background_down: 'data/images/nav/menu.png'
-                on_release: root.onNextScreen(self, "Menu")
+                on_release: root.do_set_screen(self, "Menu")
