Layout updated in preference of a ScrollView

--- a/main.kv
+++ b/main.kv
@@ -19,7 +19,7 @@
 <SoundboardWidget@ScrollView>:
     id: sound_layout
 
-<RecorderWidget@BoxLayout>:
+<RecorderWidget@ScrollView>:
     id: record_layout
 
 <MapPanelWidget@FloatLayout>:
