--- a/main.kv
+++ b/main.kv
@@ -22,6 +22,9 @@
 <RecorderWidget@ScrollView>:
     id: record_layout
 
+<MessageWidget@ScrollView>:
+    id: message_layout
+
 <MapPanelWidget@FloatLayout>:
     id: map_panel_layout
     MapWidget:
@@ -112,21 +115,8 @@
                         id: notes_menu
                 Screen:
                     name: 'Messages'
-                    BoxLayout:
-                        id: default_layout
-                        orientation: 'vertical'
-                        spacing: 2
-                        BoxLayout:
-                            id: message_panel_layout
-                            orientation: 'horizontal'
-                            size_hint: 1, .8
-                            TextInput:
-                                size_hint: 1, .85
-                                multiline: True
-                                background_color: [0,0,0,1]
-                                foreground_color: [1,1,1,1]
-                                focus: False
-                                hint_text: 'This is where the messages will go'
+                    MessageWidget:
+                        id: message_menu
                 Screen:
                     name: 'Recorder'
                     RecorderWidget:
