--- a/main.kv
+++ b/main.kv
@@ -22,7 +22,7 @@
 <RecorderWidget@ScrollView>:
     id: record_layout
 
-<MessageWidget@ScrollView>:
+<MessageWidget@BoxLayout>:
     id: message_layout
 
 <MapPanelWidget@FloatLayout>:
