Updated lock screen icon

--- a/main.kv
+++ b/main.kv
@@ -155,8 +155,8 @@
                     pos: self.pos
                     size: self.size
             Button:
-                background_normal: 'data/images/nav/camera.png'
-                background_down: 'data/images/nav/camera.png'
+                background_normal: 'data/images/nav/lock.png'
+                background_down: 'data/images/nav/lock.png'
                 on_release: app.prompt_lock_screen()
             Button:
                 background_normal: 'data/images/nav/map.png'
